# Python-API

./: CMakeLists.txt  pyproject.toml
.github/workflows/: build.yml
include/: Context.h  ContextTemplate.h  DynamicTemplateIndex.h  FacerecService.h  ProcessingBlock.h
src/: Context.cpp  ContextTemplate.cpp  DynamicTemplateIndex.cpp  FacerecService.cpp  ProcessingBlock.cpp  module.cpp
