[build-system]
requires = ["scikit-build-core[pyproject]"]
build-backend = "scikit_build_core.build"

[project]
name = "face_sdk_3divi"
version = "1.0.0"
description = "A minimal example package"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
